Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16131

Assertion `is_instant() || id == DICT_INDEXES_ID' failed in dict_index_t::instant_field_value

    XMLWordPrintable

Details

    Description

      10.3 85ccdd9ff0a7ca

      mysqld: /data/src/10.3/storage/innobase/include/dict0mem.h:1075: const byte* dict_index_t::instant_field_value(ulint, ulint*) const: Assertion `is_instant() || id == DICT_INDEXES_ID' failed.
      180509 23:06:47 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007f519db22312 in __GI___assert_fail (assertion=0x7f51a0fb26c0 "is_instant() || id == DICT_INDEXES_ID", file=0x7f51a0fb2600 "/data/src/10.3/storage/innobase/include/dict0mem.h", line=1075, function=0x7f51a0fb8bc0 <dict_index_t::instant_field_value(unsigned long, unsigned long*) const::__PRETTY_FUNCTION__> "const byte* dict_index_t::instant_field_value(ulint, ulint*) const") at assert.c:101
      #8  0x00007f51a07fbf44 in dict_index_t::instant_field_value (this=0x7f511c503868, n=7, len=0x7f519cbe79a8) at /data/src/10.3/storage/innobase/include/dict0mem.h:1075
      #9  0x00007f51a08beabe in rec_init_offsets_comp_ordinary (rec=0x7f517830a007 "", index=0x7f511c503868, offsets=0x7f511c509c20, n_core=6, format=REC_LEAF_TEMP_COLUMNS_ADDED) at /data/src/10.3/storage/innobase/rem/rem0rec.cc:384
      #10 0x00007f51a08c2f82 in rec_init_offsets_temp (rec=0x7f517830a007 "", index=0x7f511c503868, offsets=0x7f511c509c20, n_core=6, status=REC_STATUS_COLUMNS_ADDED) at /data/src/10.3/storage/innobase/rem/rem0rec.cc:1716
      #11 0x00007f51a0922477 in row_log_table_apply_op (thr=0x7f511c521dd8, new_trx_id_col=1, dup=0x7f519cbe7de0, error=0x7f519cbe7b8c, offsets_heap=0x7f511c531f30, heap=0x7f511c52dea0, mrec=0x7f517830a007 "", mrec_end=0x7f517830a150 "", offsets=0x7f511c509c20) at /data/src/10.3/storage/innobase/row/row0log.cc:2476
      #12 0x00007f51a092482f in row_log_table_apply_ops (thr=0x7f511c521dd8, dup=0x7f519cbe7de0, stage=0x7f511c50b6f0) at /data/src/10.3/storage/innobase/row/row0log.cc:3063
      #13 0x00007f51a0924de7 in row_log_table_apply (thr=0x7f511c521dd8, old_table=0x7f511c506908, table=0x7f511c51e990, stage=0x7f511c50b6f0) at /data/src/10.3/storage/innobase/row/row0log.cc:3163
      #14 0x00007f51a07fed5f in commit_try_rebuild (ha_alter_info=0x7f519cbe9450, ctx=0x7f511c0175c0, altered_table=0x7f511c51e990, old_table=0x7f510c053b90, trx=0x7f519cef3908, table_name=0x7f511c2ee8c5 "t1") at /data/src/10.3/storage/innobase/handler/handler0alter.cc:8488
      #15 0x00007f51a07f93e6 in ha_innobase::commit_inplace_alter_table (this=0x7f510c0547d8, altered_table=0x7f511c51e990, ha_alter_info=0x7f519cbe9450, commit=true) at /data/src/10.3/storage/innobase/handler/handler0alter.cc:9354
      #16 0x00007f51a05679e0 in handler::ha_commit_inplace_alter_table (this=0x7f510c0547d8, altered_table=0x7f511c51e990, ha_alter_info=0x7f519cbe9450, commit=true) at /data/src/10.3/sql/handler.cc:4407
      #17 0x00007f51a034a019 in mysql_inplace_alter_table (thd=0x7f511c000b00, table_list=0x7f511c015d28, table=0x7f510c053b90, altered_table=0x7f511c51e990, ha_alter_info=0x7f519cbe9450, inplace_supported=HA_ALTER_INPLACE_COPY_NO_LOCK, target_mdl_request=0x7f519cbe94c0, alter_ctx=0x7f519cbea0c0) at /data/src/10.3/sql/sql_table.cc:7553
      #18 0x00007f51a034fe76 in mysql_alter_table (thd=0x7f511c000b00, new_db=0x7f511c005170, new_name=0x7f511c005520, create_info=0x7f519cbeacb0, table_list=0x7f511c015d28, alter_info=0x7f519cbeabf0, order_num=0, order=0x0, ignore=false) at /data/src/10.3/sql/sql_table.cc:9644
      #19 0x00007f51a03d61d6 in Sql_cmd_alter_table::execute (this=0x7f511c0163a8, thd=0x7f511c000b00) at /data/src/10.3/sql/sql_alter.cc:463
      #20 0x00007f51a027b213 in mysql_execute_command (thd=0x7f511c000b00) at /data/src/10.3/sql/sql_parse.cc:6283
      #21 0x00007f51a027fd4a in mysql_parse (thd=0x7f511c000b00, rawbuf=0x7f511c015c08 "ALTER TABLE t1 DROP COLUMN col3  /* QNO 229 CON_ID 16 */", length=56, parser_state=0x7f519cbec630, is_com_multi=false, is_next_command=false) at /data/src/10.3/sql/sql_parse.cc:8003
      #22 0x00007f51a026d44f in dispatch_command (command=COM_QUERY, thd=0x7f511c000b00, packet=0x7f511c01c511 " ALTER TABLE t1 DROP COLUMN col3  /* QNO 229 CON_ID 16 */ ", packet_length=58, is_com_multi=false, is_next_command=false) at /data/src/10.3/sql/sql_parse.cc:1846
      #23 0x00007f51a026be73 in do_command (thd=0x7f511c000b00) at /data/src/10.3/sql/sql_parse.cc:1391
      #24 0x00007f51a03d088f in do_handle_one_connection (connect=0x7f51a3f1e010) at /data/src/10.3/sql/sql_connect.cc:1402
      #25 0x00007f51a03d0613 in handle_one_connection (arg=0x7f51a3f1e010) at /data/src/10.3/sql/sql_connect.cc:1308
      #26 0x00007f519f789064 in start_thread (arg=0x7f519cbed700) at pthread_create.c:309
      #27 0x00007f519dbdc62d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
       
      Query (0x7f511c015c08): ALTER TABLE t1 DROP COLUMN col3  /* QNO 229 CON_ID 16 */
      Connection ID (thread ID): 16
      Status: NOT_KILLED
      

      Very poorly reproducible, so far once in travis tests and once locally out of ~40 attempts

      experimental 6c40fc679d99

      perl ./runall-trials.pl --trials=20 --duration=400 --threads=6 --seed=1525833353 --reporters=Backtrace,ErrorLog,Deadlock --validators=TransformerNoComparator --transformers=ConvertSubqueriesToViews,ConvertTablesToDerived,Count,DisableOptimizations,Distinct,EnableOptimizations,ExecuteAsCTE,ExecuteAsDeleteReturning,ExecuteAsDerived,ExecuteAsExcept,ExecuteAsExecuteImmediate,ExecuteAsInsertSelect,ExecuteAsIntersect,ExecuteAsSelectItem,ExecuteAsUnion,ExecuteAsUpdateDelete,ExecuteAsView,ExecuteAsWhereSubquery,Having,InlineSubqueries,LimitRowsExamined,OrderBy,StraightJoin,ExecuteAsPreparedTwice,ExecuteAsTrigger,ExecuteAsSPTwice,ExecuteAsFunctionTwice --redefine=conf/mariadb/general-workarounds.yy --mysqld=--log_output=FILE --mysqld=--log_bin_trust_function_creators=1 --mysqld=--log-bin --mysqld=--max-statement-time=30 --mysqld=--loose-debug_assert_on_not_freed_memory=0 --views --redefine=conf/mariadb/sequences.yy --basedir=/data/bld/10.3 --grammar=conf/runtime/alter_online.yy --gendata=conf/runtime/alter_online.zz --engine=InnoDB --vardir=/dev/shm/vardir
      

      Attachments

        1. threads
          57 kB
          Elena Stepanova
        2. MDEV-16131.cc
          2 kB
          Matthias Leich
        3. MDEV-16131.sh
          1 kB
          Matthias Leich
        4. MDEV-16131.yy
          0.4 kB
          Matthias Leich
        5. MDEV-16131.zz
          0.2 kB
          Matthias Leich

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.